# caselens

./: .dockerignore  .gitignore  DEPLOY.md  README.md  docker-compose.yml  package.json  plan.md  pnpm-lock.yaml  render.yaml
apps/gateway/: Dockerfile  package.json  tsconfig.json
apps/gateway/src/: config.ts  index.ts
apps/gateway/src/ai/: aiClient.ts  localExtract.ts  types.ts
apps/gateway/src/ingest/: ingestService.ts
apps/gateway/src/routes/: cases.ts  evidence.ts  report.ts  search.ts  webhooks.ts
apps/gateway/src/search/: searchIndex.ts
apps/gateway/src/seed/: bootstrap.ts  data.ts
apps/gateway/src/socket/: emitter.ts  socketServer.ts
apps/gateway/src/store/: index.ts  memoryStore.ts  mongoStore.ts  types.ts
apps/gateway/src/webhook/: signature.ts
apps/web/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: AskPanel.tsx  ClassificationBanner.tsx  CommandBar.tsx  EntityChip.tsx  EntityPanel.tsx  EvidenceSearch.tsx  EvidenceUpload.tsx  GraphLegend.tsx  IngestionFeed.tsx  LinkGraph.tsx  ReportPanel.tsx  RightRail.tsx  Timeline.tsx
apps/web/src/hooks/: useCaseData.ts  useMediaQuery.ts
apps/web/src/lib/: api.ts  entityStyle.ts  socket.ts
apps/web/src/store/: useCaseStore.ts
docs/superpowers/specs/: 2026-07-06-caselens-design.md
seed/: sample_evidence.txt
services/ai/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/ai/app/: extract.py  llm.py  main.py  schemas.py
services/ai/tests/: test_extract.py
