[project]
name = "caselens-ai"
version = "0.1.0"
description = "CaseLens AI service — extraction, RAG Q&A, report generation"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
